--- a/package.json
+++ b/package.json
@@ -1,7 +1,10 @@
 {
   "name": "codeNameMean",
   "version": "0.0.0",
-  "dependencies": {},
+  "dependencies": {
+    "cheerio": "^0.19.0",
+    "request": "^2.64.0"
+  },
   "scripts": {
     "test": "gulp test"
   },
