--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.0.0",
   "dependencies": {
     "cheerio": "^0.19.0",
+    "moment": "^2.10.6",
     "request": "^2.64.0"
   },
   "scripts": {
