--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "dependencies": {
     "cheerio": "^0.19.0",
     "moment": "^2.10.6",
-    "request": "^2.64.0"
+    "request": "^2.64.0",
+    "underscore": "^1.8.3"
   },
   "scripts": {
     "test": "gulp test"
